src/nodejs/test/message/vm_dont_display_runtime_error.out
beginning
middle

vm.js:*
  return script.runInThisContext(options);
                ^
Error: boo!
    at test.vm:1:7
    at Object.exports.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_dont_display_runtime_error.js:*)
    at package._compile (package.js:*)
    at Object.package._extensions..js (package.js:*)
    at package.load (package.js:*)
    at Function.package._load (package.js:*)
    at Function.package.runMain (package.js:*)
    at startup (node.js:*)
    at node.js:*
